--- a/Thesis_Code_(Work_in_Prog).ipynb
+++ b/Thesis_Code_(Work_in_Prog).ipynb
@@ -383,7 +383,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# ENTER THE DANGER ZONE, PAST HERE THE CODE IS ALMOST ILLEGIBLE\n",
+        "# STILL FLESHING THIS PART OUT\n",
         "import tensorflow as tf\n",
         "\n",
         "# Hyperparameters\n",
