--- a/Thesis_Code_(Work_in_Prog).ipynb
+++ b/Thesis_Code_(Work_in_Prog).ipynb
@@ -17,6 +17,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#DRAFT 1 DOESNT WORK\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import Layer, Dense\n",
         "class SimplexAttention(Layer):\n",
@@ -101,7 +102,7 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras import layers\n",
         "\n",
-        "# Function for positional encoding\n",
+        "#DRAFT 2\n",
         "def positional_encoding(position, d_model):\n",
         "    angle_rads = tf.range(position, dtype=tf.float32)[:, tf.newaxis] / tf.math.pow(10000, (tf.range(d_model, dtype=tf.float32)[tf.newaxis, :] // 2) * 2 / d_model) #wtf i just vomited pure garbage\n",
         "    angle_rads[:, 0::2] = tf.math.sin(angle_rads[:, 0::2])\n",
